--- a/index.html
+++ b/index.html
@@ -288,7 +288,7 @@
     <div id="work"> <!-- beginning of work -->
 
       <div class="section">
-        <h2>2 Column Section</h2>
+        <h2>Selected Clips</h2>
         
         <div class="inner double">
           <p>Title</p>
