--- a/index.html
+++ b/index.html
@@ -263,8 +263,8 @@
 
   <div class="header"> <!-- beginning of header -->
     <ul>
-      <li class="home-nav active"><h3><a href="#home">My Name</a></h3></li>
-      <li class="work-nav"><h3><a href="#work">Work</a></h3></li>
+      <li class="home-nav active"><h3><a href="#home">About</a></h3></li>
+      <li class="work-nav"><h3><a href="#work">Clips</a></h3></li>
       <li class="contact-nav"><h3><a href="#contact">Contact</a></h3></li>
     </ul>
   </div> <!-- end of header -->
