--- a/index.html
+++ b/index.html
@@ -292,7 +292,7 @@
         
         <div class="inner double">
           <p>Title</p>
-          <div class="image"><img src=""></div>
+          <div class="image"><img src="water.jpg"></div>
         </div>
 
         <div class="inner double">
